# kScreenDoctorGUI

./: .qmlls.ini  CMakeLists.txt  main.cpp
qml/: Main.qml
src/: KDisplay.cpp  KDisplay.h  ScreenConfigurator.cpp  ScreenConfigurator.h  kScreenDoctorParser.cpp  kScreenDoctorParser.h  main.cpp
